samples/_failures_safe/1761045395_8af67a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f93efb2.c: In function ‘graph_destroy’:
./samples/SAFE/__tmp_1f93efb2.c:170:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  170 |             struct GraphEdge *next_edge
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_1f93efb2.c:170:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f93efb2.c:170:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f93efb2.c:170:20: error: expected declaration or statement at end of input
